# image2characters

./: .gitignore  LICENSE  README.md  pyproject.toml
example/: image.py  video.py
src/image2characters/: __init__.py  image2characters.py
